--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,5 +15,5 @@ test:
   tags:
     - docker
   script:
-    - apt install -y dbus-x11
+    - apt update && install -y dbus-x11
     - go test ./...
