--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,6 @@ test:
   tags:
     - docker
   script:
-    - apt update && apt install -y dbus-x11 gnome-keyring libsecret-1-0
+    - apt update && apt install -y dbus-x11 gnome-keyring libsecret-1-0 python-gnomekeyring
     - dbus-launch /usr/bin/python -c "import gnomekeyring;gnomekeyring.create_sync('login', '');"
     - make test
