--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 on: [push]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,5 +14,10 @@ jobs:
         with:
           go-version: '^1.15.2'
 
-      - name: Test
+      - name: Install system dependencies
+        run: |
+              apt update && apt install -y dbus-x11 gnome-keyring libsecret-1-0 python-gnomekeyring
+              dbus-launch /usr/bin/python -c "import gnomekeyring;gnomekeyring.create_sync('login', '');"
+
+      - name: Go test
         run: make test
