github actions/ci: fix keyring setup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
       - name: Install system dependencies
         run: |
               sudo apt update && sudo apt install -y dbus-x11 gnome-keyring libsecret-1-0 python-keyring pass
+              /usr/bin/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
+              # dbus-launch /usr/bin/python -c "import keyring;keyring.set_password('system', 'login', '');"
 
       - name: Go test
         run: make test
