--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
               sudo apt update && sudo apt install -y dbus-x11 gnome-keyring libsecret-1-0 python-keyring
               sudo dbus-run-session -- sh
               sudo echo password | sudo gnome-keyring-daemon --unlock
-              sudo dbus-launch /usr/bin/python -c "import keyring;keyring.get_keyring();keyring.set_password('default', 'login', 'password');"
+              # sudo dbus-launch /usr/bin/python -c "import keyring;keyring.get_keyring();keyring.set_password('default', 'login', 'password');"
               #/usr/bin/gnome-keyring-daemon --start --components=secrets,ssh
 
 
